fixed over flow of buttons and text on mobile view #47

--- a/style.css
+++ b/style.css
@@ -185,3 +185,26 @@
       text-align: center
      
   }
+
+  
+.content span {
+  font-size: 6rem;
+}
+
+@media (max-width:470px) {
+  .content {
+    font-size: .8rem;
+    overflow: auto;
+  }
+  .content span {
+    font-size: 3rem;
+  }
+
+  .btn {
+    font-size: 15px;
+    padding: 8px 16px;
+  }
+}
+
+
+
